--- a/package.json
+++ b/package.json
@@ -9,20 +9,24 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/AymanJitan/polygonize.git"
+    "url": "git+https://github.com/evansque/polygonize.git"
   },
-  "author": "AymanJitan <ayman.jitan@gmail.com>",
+  "author": "Evan Lévesque <evan.levs@gmail.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/AymanJitan/polygonize/issues"
+    "url": "https://github.com/evansque/polygonize/issues"
   },
-  "homepage": "https://github.com/AymanJitan/polygonize",
+  "homepage": "https://github.com/evansque/polygonize",
   "devDependencies": {
-    "babel-preset-es2015": "^6.18.0",
+    "@babel/core": "^7.0.0-0",
+    "babel-core": "6",
+    "babel-preset-es2015": "^6.24.1",
     "gulp": "^3.9.1",
-    "gulp-babel": "^6.1.2",
-    "gulp-connect": "^5.0.0",
-    "gulp-eslint": "^3.0.1",
-    "gulp-minify": "0.0.14"
-  }
+    "gulp-babel": "^8.0.0",
+    "gulp-connect": "^5.6.1",
+    "gulp-eslint": "^5.0.0",
+    "gulp-minify": "^3.1.0",
+    "serve-static": "^1.13.2"
+  },
+  "dependencies": {}
 }
